# HFT-Simulator_Backend

./: README.md
cpp_engine/: CMakeLists.txt
cpp_engine/include/: latency_model.hpp  market_data.hpp  order_book.hpp  signal_receiver.hpp  trade_engine.hpp
cpp_engine/src/: latency_model.cpp  main.cpp  market_data.cpp  order_book.cpp  signal_receiver.cpp  trade_engine.cpp
